[tool.poetry]
name = "flask-stronghold"
version = "0.1.0"
description = "A very simple and small Flask extension that makes all of your app's routes require login by default."
authors = ["Magnun Leno <magnun.leno@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/magnunleno/flask-stronghold"
repository = "https://github.com/magnunleno/flask-stronghold"
keywords = ["flask", "authorization", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest-cov = "^2.11.1"
pytest-flask = "^1.2.0"
flask-login = "^0.5.0"
pytest-mock = "^3.5.1"
tox = "^3.23.0"
coveralls = "^3.1.0"
sphinx = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
